--- a/notebooks/Reading_in_Data_Example_Tester013.ipynb
+++ b/notebooks/Reading_in_Data_Example_Tester013.ipynb
@@ -221,7 +221,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#data['1']"
@@ -374,6 +376,13 @@
     "# grid_movie_tester011.py\n",
     "# to plot a movie of this grid. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
