refactored and added irl

--- a/notebooks/Scratch_DQN_w_Features.ipynb
+++ b/notebooks/Scratch_DQN_w_Features.ipynb
@@ -307,7 +307,9 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "replay_buffer = ReplayBuffer(1000, 1)\n",
@@ -680,7 +682,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -789,7 +793,9 @@
   {
    "cell_type": "code",
    "execution_count": 690,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def local_crystals(env):\n",
@@ -809,7 +815,9 @@
   {
    "cell_type": "code",
    "execution_count": 696,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#def closest_crystal(env):\n",
@@ -860,7 +868,9 @@
   {
    "cell_type": "code",
    "execution_count": 701,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#env.crystal_locations[np.sqrt(np.sum(((env.crystal_locations-env.ship_location)**2),axis=1))<8]"
@@ -1094,7 +1104,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.6.1"
   },
   "toc": {
    "nav_menu": {},
